Added tests case